--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     implementation 'com.codeborne:selenide:6.12.3'
     implementation 'org.slf4j:slf4j-nop:1.7.32'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
 }
 
